# beatsy

./: .env  .gitignore  CONTRIBUTING.md  EPIC_8_9_INTEGRATION_TEST_REPORT.md  LICENSE  README.md  STORY_10_2_COMPLETION_REPORT.md  STORY_10_3_BROWSER_COMPATIBILITY_REPORT.md  STORY_8_3_COMPLETE.md  STORY_9_1_COMPLETION_REPORT.md  STORY_9_2_FINAL_REPORT.md  STORY_9_2_STATUS.md  TEST_STORY_5_2.md  add_stop_timer.py  add_timer_functions.sh  add_timer_vars.sh  fix_tests.py  fix_tests_comprehensive.py  hacs.json  info.md  package.json  pyproject.toml  replace_start_timer.py  story_8_6_implementation.patch  tailwind.config.js  test_bet_toggle.html  test_epic_8_9_integration.html  test_next_song.html  test_round_start.py  test_song_selection.py  test_song_selection_standalone.html  test_story_12_9_manual.py  test_story_5_2.py  test_story_9_1.html  test_story_9_2.html  test_story_9_3.html  test_story_9_3_simple.js  test_story_9_4_leaderboard.html  test_story_9_5.html  test_story_9_6_scrolling.html  (+3 more)
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/_cfg/ides/: claude-code.yaml
bmad/bmm/: config.yaml
bmad/core/: config.yaml
custom_components/beatsy/: __init__.py  config_flow.py  const.py  error_responses.py  events.py  game_initializer.py  game_state.py  http_view.py  manifest.json  playlist_loader.py  rate_limiter.py  services.yaml  spotify_helper.py  spotify_service.py  state_test.py  validation.py  websocket_api.py  websocket_handler.py
custom_components/beatsy/playlists/: 2000s_hits.json  80s_hits.json  90s_classics.json  Greatest_Hits.json  README.md  classic_rock.json
custom_components/beatsy/translations/: en.json
custom_components/beatsy/www/: README-PRODUCTION.md  admin.html  start.html  tailwind.config.js  test.html
dashview/: MIGRATION_PLAN.md  README.md
dashview/backend/: .env.example  .eslintrc.json  package-lock.json  package.json
dashview/backend/src/: index.ts
dashview/frontend/: .eslintrc.json  package-lock.json  package.json
docs/: EPIC-2-MANUAL-TESTING-GUIDE.md  PRD.md  architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2025-11-10.md  project-scan-report.json  sprint-status.yaml  tech-spec-epic-1.md  tech-spec-epic-2.md  ux-color-themes.html  ux-design-directions.html  ux-design-specification.md
docs/.archive/: architecture.md  development-guide.md  index.md  project-overview.md  source-tree-analysis.md
docs/retrospectives/: epic-1-retro-2025-11-11.md
docs/stories/: 1-1-minimal-component-structure-registration.context.xml  1-1-minimal-component-structure-registration.md  1-2-serve-static-html-without-authentication.context.xml  1-2-serve-static-html-without-authentication.md  1-3-websocket-connection-without-authentication.context.xml  1-3-websocket-connection-without-authentication.md  1-4-spotify-api-basic-integration-test.context.xml  1-4-spotify-api-basic-integration-test.md  1-5-data-registry-write-read-stress-test.context.xml  1-5-data-registry-write-read-stress-test.md  2-1-hacs-compliant-manifest-repository-structure.context.xml  2-1-hacs-compliant-manifest-repository-structure.md  2-2-component-lifecycle-management.md  2-3-in-memory-game-state-management.context.xml  2-3-in-memory-game-state-management.md  2-4-spotify-media-player-detection.context.xml  2-4-spotify-media-player-detection.md  2-5-http-route-registration.context.xml  2-5-http-route-registration.md  2-6-websocket-command-registration.context.xml  2-6-websocket-command-registration.md  2-7-configuration-entry-setup-flow-2025-best-practice.context.xml  2-7-configuration-entry-setup-flow-2025-best-practice.md  validation-report-2-7-2025-11-13.md
tests/: conftest.py  poc_spotify_test.py  poc_state_test.py  poc_websocket_load_test.py  test_config_flow.py  test_game_state.py  test_http_routes_integration.py  test_http_view.py  test_http_view_validation.py  test_init.py  test_integration_lifecycle.py  test_simple_lifecycle.py  test_spotify_helper.py  test_websocket_api.py
(+8 files in other folders)
